<resources>
    <string name="app_name">mobile</string>
    <string name="hello_world">Hello world!</string>
    <string name="log_in">Log in</string>
    <string name="login_illustration">Login illustration</string>
    <string name="email">Email</string>
    <string name="enter_email">Enter email</string>
    <string name="password">Password</string>
    <string name="enter_password">Enter password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="register">Register</string>
    <string name="add_profile_photo">Add profile photo</string>
    <string name="name">Name</string>
    <string name="enter_name">Enter name</string>
    <string name="confirm_password">Confirm password</string>
    <string name="last_name">Last name</string>
    <string name="enter_last_name">Enter last name</string>
    <string name="address">Address</string>
    <string name="enter_address">Enter address</string>
    <string name="phone_number">Phone number</string>
    <string name="enter_phone_number">Enter phone number</string>
    <!-- driver registration -->
    <string name="register_driver_title">Register Driver</string>
    <string name="vehicle_info_title">Vehicle info</string>
    <string name="vehicle_model_label">Vehicle model</string>
    <string name="vehicle_model_hint">Enter vehicle model</string>
    <string name="vehicle_type_label">Vehicle type</string>
    <string name="vehicle_type_hint">Select vehicle type</string>
    <string name="licence_plate_label">Licence plate</string>
    <string name="licence_plate_hint">Enter licence plate</string>
    <string name="seats_label">Number of seats</string>
    <string name="seats_hint">Enter number of seats</string>
    <string name="baby_friendly_label">Baby Friendly</string>
    <string name="pet_friendly_label">Pet Friendly</string>
    <string name="register_driver_button">Register driver</string>
    <string name="confirm_password_label">Confirm password</string>
    <string name="confirm_password_hint">Enter password again</string>
    <string name="activate">Activate</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="filter">Filter</string>
    <string name="open_nav">Open navigation drawer</string>
    <string name="close_nav">Close navigation drawer</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="choose_picture">Choose picture</string>
    <string name="forgot_password_header">Forgot password?</string>
    <string name="forgot_password_explanation">Please enter your email to reset the password, we will sent you a verification code.</string>

    <string name="verify_email">Continue</string>
    <string name="verify_otp_header">Check your email</string>
    <string name="verify_otp_explanation">We sent a reset link to you, please enter a 6 digit code that is mentioned in email.</string>
    <string name="set_a_new_password">Set a new password</string>
    <string name="change_password_explanation">Please enter your new password and confirm it to complete the reset.</string>
    <string name="change_password">Change password</string>

    <string-array name="mock_departures">
        <item>Bulevar Oslobođenja 123</item>
        <item>Mičurinova 44</item>
        <item>Antona Čehova 6</item>
        <item>Branislava Nušića 7</item>
        <item>Železnička 5</item>
        <item>Cara Dušana 36</item>
    </string-array>

    <string-array name="mock_destinations">
        <item>Fruškogorska 11</item>
        <item>Stražlovka 28</item>
        <item>Heroja Pinkija 77</item>
        <item>Beogradski kej 45</item>
        <item>Danila Kiša 1</item>
        <item>Gogoljeva 20</item>
    </string-array>

    <string-array name="mock_prices">
        <item>450 RSD</item>
        <item>320 RSD</item>
        <item>600 RSD</item>
        <item>780 RSD</item>
        <item>1200 RSD</item>
        <item>0 RSD</item>
    </string-array>

    <string-array name="mock_dates">
        <item>28.12.2025.</item>
        <item>27.12.2025.</item>
        <item>26.12.2025.</item>
        <item>25.12.2025.</item>
        <item>24.12.2025.</item>
        <item>23.12.2025.</item>
    </string-array>

    <string-array name="mock_times_start">
        <item>14:30</item>
        <item>09:15</item>
        <item>20:00</item>
        <item>11:00</item>
        <item>23:15</item>
        <item>08:00</item>
    </string-array>

    <string-array name="mock_times_end">
        <item>14:45</item>
        <item>09:30</item>
        <item>20:25</item>
        <item>11:07</item>
        <item>23:45</item>
        <item>-</item>
    </string-array>

    <string-array name="mock_passengers_list">
        <item>Sara Petrović</item>
        <item>Igor Marković,Marija Jovanović</item>
        <item>Balša Anić</item>
        <item>Balša Antić</item>
        <item>Sara Petrović,Lazar Lazić,Miloš Milošević</item>
        <item>Ivana Ivanić</item>
    </string-array>

    <string-array name="mock_statuses">
        <item>FINISHED</item>
        <item>FINISHED</item>
        <item>FINISHED</item>
        <item>FINISHED</item>
        <item>FINISHED</item>
        <item>DRIVER_CANCEL</item>
    </string-array>

    <string-array name="mock_panics">
        <item>false</item>
        <item>false</item>
        <item>true</item>
        <item>false</item>
        <item>false</item>
        <item>false</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pricing_title">Update Ride Price</string>
    <string name="price_save">Save</string>
    <string name="price_standard">Standard</string>
    <string name="price_luxury">Luxury</string>
    <string name="price_van">Van</string>
    <string name="choose">CHOOSE</string>
    <string name="driver_name">Driver Name</string>
    <string name="driver_email_com">driver@email.com</string>
    <string name="_381_64_000_000">+381 64 000 000</string>
    <string name="distance">Distance:</string>
    <string name="_12_5_km">12.5 km</string>
    <string name="total_price">Total price:</string>
    <string name="_1200_rsd">1200 RSD</string>
    <string name="ride_stops">Ride Stops</string>
    <string name="ride_grades">Ride Grades</string>
    <string name="reports">Reports</string>
    <string name="type_a_message">Type a message...</string>
    <string name="send">Send</string>
    <string name="rate_driver">Rate Driver</string>
    <string name="eta">ETA: --</string>
    <string name="driver">Driver: --</string>
    <string name="rate_vehicle">Rate Vehicle</string>
    <string name="report">Report</string>
    <string name="comment">Comment</string>
    <string name="active">ACTIVE</string>
    <string name="passengers">Passengers: -</string>
    <string name="from">From: -</string>
    <string name="to">To: -</string>
    <string name="price_0_rsd">Price: 0 RSD</string>
    <string name="start">Start: -</string>

    <string-array name="vehicle_types">
        <item>Standard</item>
        <item>Luxury</item>
        <item>Van</item>
    </string-array>
</resources>