<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/change_password_scroll_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp"
        android:background="@drawable/login_bg_gradient">

        <ImageView
            android:id="@+id/imgIllustration"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:scaleType="fitCenter"
            android:src="@drawable/illustration_1_v2"
            android:contentDescription="@string/login_illustration" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_a_new_password"
            android:textSize="32sp"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:layout_marginTop="16dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:textSize = "16sp"
            android:text="@string/change_password_explanation"
            android:textColor="@color/placeholder" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:textSize = "16sp"
            android:text="@string/password"
            android:textColor="@android:color/white" />

        <EditText
            android:id="@+id/etChangePassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/white"
            android:hint="@string/enter_password"
            android:textSize="14sp"
            android:inputType="textPassword"
            android:textColor="@android:color/white"
            android:textColorHint="@color/placeholder"
            android:autofillHints="emailAddress"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm_password"
            android:textSize = "16sp"
            android:textColor="@android:color/white"
            android:layout_marginTop="24dp" />

        <EditText
            android:id="@+id/etChangePasswordConfirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            android:textSize = "14sp"
            android:textColor="@android:color/white"
            android:textColorHint="@color/placeholder"
            android:backgroundTint="@android:color/white"
            android:autofillHints="password"/>
        <Button
            android:id="@+id/btnChangePassword"
            android:layout_width="208dp"
            android:layout_height="56dp"
            android:layout_gravity="center"
            android:layout_marginTop="32dp"
            android:backgroundTint="@color/accent"
            android:text="@string/change_password"
            android:textColor="@color/background"
            android:textSize="16sp" />

    </LinearLayout>

</ScrollView>
